@@ -5,6 +5,7 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import pl.tomskr.rosary_manager.service.RosaryGroupService;
 
@@ -20,7 +21,8 @@ public class RosaryMemberController {
     @GetMapping
     @RequestMapping("/index/{id}/show")
     public String showById(@PathVariable String id, Model model){
-        model.addAttribute("rosaryGroup", rosaryGroupService.findById(new Long(id)));
+        model.addAttribute("rosaryGroup", rosaryGroupService.findById(Long.valueOf(id)));
         return "members/show";
     }
+
 }
